fix(css): add Stable Scrollbar Gutters
- Add support for Stable Scrollbar Gutters
  (based on example from Zach Leatherman).

More details:

- https://www.zachleat.com/web/stable-scrollbar-gutters/
- https://developer.mozilla.org/en-US/docs/Web/CSS/scrollbar-gutter

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,19 @@
 		tab-size: 2;
 		hanging-punctuation: first allow-end last;
 		word-break: break-word;
+		overflow-y: scroll;
+	}
+
+	/*
+		Stable Scrollbar Gutters
+		- https://www.zachleat.com/web/stable-scrollbar-gutters/
+		- https://developer.mozilla.org/en-US/docs/Web/CSS/scrollbar-gutter
+	*/
+	@supports (scrollbar-gutter: stable) {
+		html {
+			overflow-y: auto;
+			scrollbar-gutter: stable;
+		}
 	}
 
 	body {
